--- a/explorer.rc
+++ b/explorer.rc
@@ -10,5 +10,5 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 STRINGTABLE DISCARDABLE
 BEGIN
     IDS_VERSION_STR REACTOS_STR_PRODUCT_VERSION
-    IDS_EXPLORER_VERSION_STR "ReactOS %s Explorer"
+    IDS_EXPLORER_VERSION_STR "PExlorer %0s"
 END
