--- a/PExlorer_VS2012.vcxproj
+++ b/PExlorer_VS2012.vcxproj
@@ -28,23 +28,25 @@
     <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v110</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v110</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v110</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
-    <CharacterSet>NotSet</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v110</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
-    <CharacterSet>NotSet</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -290,30 +292,20 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="utility\dragdropimpl.cpp" />
+    <ClCompile Include="shell\fileexplorer.cpp" />
     <ClCompile Include="utility\shellbrowserimpl.cpp" />
     <ClCompile Include="utility\shellclasses.cpp" />
     <ClCompile Include="utility\utility.cpp" />
     <ClCompile Include="utility\window.cpp" />
     <ClCompile Include="taskbar\desktopbar.cpp" />
-    <ClCompile Include="taskbar\favorites.cpp" />
     <ClCompile Include="taskbar\quicklaunch.cpp" />
     <ClCompile Include="taskbar\startmenu.cpp" />
     <ClCompile Include="taskbar\taskbar.cpp" />
     <ClCompile Include="taskbar\traynotify.cpp" />
     <ClCompile Include="desktop\desktop.cpp" />
     <ClCompile Include="shell\entries.cpp" />
-    <ClCompile Include="shell\fatfs.cpp" />
-    <ClCompile Include="shell\filechild.cpp" />
-    <ClCompile Include="shell\mainframe.cpp" />
-    <ClCompile Include="shell\ntobjfs.cpp" />
-    <ClCompile Include="shell\pane.cpp" />
-    <ClCompile Include="shell\regfs.cpp" />
-    <ClCompile Include="shell\shellbrowser.cpp" />
     <ClCompile Include="shell\shellfs.cpp" />
-    <ClCompile Include="shell\webchild.cpp" />
     <ClCompile Include="shell\winfs.cpp" />
-    <ClCompile Include="dialogs\searchprogram.cpp" />
     <ClCompile Include="dialogs\settings.cpp" />
     <ClCompile Include="explorer.cpp" />
     <ClCompile Include="precomp.cpp">
@@ -342,32 +334,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jconfig\jcfg.h" />
-    <ClInclude Include="utility\dragdropimpl.h" />
+    <ClInclude Include="shell\fileexplorer.h" />
     <ClInclude Include="utility\shellbrowserimpl.h" />
     <ClInclude Include="utility\shellclasses.h" />
-    <ClInclude Include="utility\treedroptarget.h" />
     <ClInclude Include="utility\utility.h" />
     <ClInclude Include="utility\window.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="taskbar\desktopbar.h" />
-    <ClInclude Include="taskbar\favorites.h" />
     <ClInclude Include="taskbar\quicklaunch.h" />
     <ClInclude Include="taskbar\startmenu.h" />
     <ClInclude Include="taskbar\taskbar.h" />
     <ClInclude Include="taskbar\traynotify.h" />
     <ClInclude Include="desktop\desktop.h" />
     <ClInclude Include="shell\entries.h" />
-    <ClInclude Include="shell\fatfs.h" />
-    <ClInclude Include="shell\filechild.h" />
-    <ClInclude Include="shell\mainframe.h" />
-    <ClInclude Include="shell\ntobjfs.h" />
-    <ClInclude Include="shell\pane.h" />
-    <ClInclude Include="shell\regfs.h" />
-    <ClInclude Include="shell\shellbrowser.h" />
     <ClInclude Include="shell\shellfs.h" />
-    <ClInclude Include="shell\webchild.h" />
     <ClInclude Include="shell\winfs.h" />
-    <ClInclude Include="dialogs\searchprogram.h" />
     <ClInclude Include="dialogs\settings.h" />
     <ClInclude Include="explorer.h" />
     <ClInclude Include="externals.h" />
