improve ClassicShell StartMenu(4.2.5c) support
*fix issue that startmenu hook need 1 minute
*make startmenu icon be a empty icon

--- a/PExlorer_VS2015.vcxproj
+++ b/PExlorer_VS2015.vcxproj
@@ -376,6 +376,7 @@
     <Image Include="res\dot_red.ico" />
     <Image Include="res\dot_trans.ico" />
     <Image Include="res\drivebar.bmp" />
+    <Image Include="res\empty.ico" />
     <Image Include="res\explorer.ico" />
     <Image Include="res\favorites.ico" />
     <Image Include="res\floating.ico" />
