--- a/WinXShell_VS2015.vcxproj.filters
+++ b/WinXShell_VS2015.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClCompile Include="shell\fileexplorer.cpp">
       <Filter>shell</Filter>
     </ClCompile>
+    <ClCompile Include="DUI\UIManager.cpp">
+      <Filter>DUI</Filter>
+    </ClCompile>
+    <ClCompile Include="DUI\UICreator.cpp">
+      <Filter>DUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -123,6 +129,12 @@
     </ClInclude>
     <ClInclude Include="shell\fileexplorer.h">
       <Filter>shell</Filter>
+    </ClInclude>
+    <ClInclude Include="DUI\UICreator.h">
+      <Filter>DUI</Filter>
+    </ClInclude>
+    <ClInclude Include="DUI\UIManager.h">
+      <Filter>DUI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -345,6 +357,9 @@
     </Filter>
     <Filter Include="jconfig">
       <UniqueIdentifier>{738faaa0-fce2-4d26-9acb-5e6c2f9169f5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DUI">
+      <UniqueIdentifier>{88849217-311a-4746-b089-fd7c92968594}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
